# djangoproject-template-kmuhelper-heroku

./: .gitignore  Procfile  README.md  app-with-own-db.json  app.json  heroku-release.sh  manage.py  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: tests.yml
mysite/: settings.py
mysite/static/: heroku-application-error.html  heroku-maintenance-mode.html
src/mysite/: settings.py  urls.py
