[project]
name = "djangoproject-template-kmuhelper-heroku"
version = "0.1.0"
description = "Template for running django-kmuhelper in heroku"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url==3.1.2",
    "django==6.0.7",
    "django-debug-toolbar==7.0.0",
    "django-kmuhelper==1.8.8",
    "gunicorn==26.0.0",
    "mysqlclient==2.2.8",
    "psycopg[binary,pool]==3.3.4",
    "requests==2.34.2",
    "rich==15.0.0",
    "whitenoise==6.12.0",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "mysite"
